--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ async-trait = "0.1.81"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive", "env"] }
 dotenvy = "0.15.7"
+lazy_static = "1.5.0"
 mockall = "0.13.0"
 mutants = "0.0.3"
+regex = "1.10.6"
 sqlx = { version = "0.8.0", features = [
     "runtime-tokio",
     "macros",
