--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ dotenvy = "0.15.7"
 lazy_static = "1.5.0"
 mockall = "0.13.0"
 mutants = "0.0.3"
+password-auth = "1.0.0"
 regex = "1.10.6"
 sqlx = { version = "0.8.0", features = [
     "runtime-tokio",
