--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ testresult = "0.4.1"
 thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["full"] }
 uuid = { version = "1.10.0", features = ["v7"] }
+zxcvbn = "3.1.0"
