--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,15 @@ edition = "2021"
 name = "rust_saas_starter"
 path = "src/lib/lib.rs"
 
+[[bin]]
+name = "server"
+path = "src/bin/server/main.rs"
+
 [dependencies]
 anyhow = "1.0.86"
 async-trait = "0.1.81"
+axum = { version = "0.7.5", features = ["macros"] }
+axum-test = "15.3.1"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive", "env"] }
 dotenvy = "0.15.7"
@@ -18,6 +24,8 @@ mockall = "0.13.0"
 mutants = "0.0.3"
 password-auth = "1.0.0"
 regex = "1.10.6"
+serde = { version = "1.0.208", features = ["serde_derive"] }
+serde_json = "1.0.125"
 sqlx = { version = "0.8.0", features = [
     "runtime-tokio",
     "macros",
@@ -29,5 +37,10 @@ sqlx = { version = "0.8.0", features = [
 testresult = "0.4.1"
 thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["full"] }
+tower-http = { version = "0.5.2", features = ["trace", "tracing"] }
+tower-layer = "0.3.3"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
+utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
 uuid = { version = "1.10.0", features = ["v7"] }
 zxcvbn = "3.1.0"
