--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin/server/main.rs"
 anyhow = "1.0.86"
 async-trait = "0.1.81"
 axum = { version = "0.7.5", features = ["macros"] }
+axum-server = "0.7.1"
 axum-test = "15.3.1"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive", "env"] }
