Switch to axum_server (#3)
* Switch to axum_server

* Add a HTTPS server and redirect from HTTP

* Move server implementation into their own modules

* Add http redirect test

---------

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 HTTP_PORT=3000
+HTTPS_PORT=3443
+
+BASE_URL=https://localhost:${HTTPS_PORT}
+
+CERT_PATH=certs/cert.pem
+KEY_PATH=certs/key.pem
 
 DB_HOST=localhost
 DB_PORT=5432
