--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ path = "src/bin/server/main.rs"
 [dependencies]
 anyhow = "1.0.86"
 async-trait = "0.1.81"
-axum = { version = "0.7.5", features = ["macros"] }
+axum = { version = "0.7.5", features = ["macros", "matched-path"] }
 axum-server = { version = "0.7.1", features = ["tls-rustls"] }
 axum-test = "15.3.1"
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.16", features = ["derive", "env"] }
 dotenvy = "0.15.7"
 http-serde = "2.1.1"
