Add endpoint and template for email confirmation request

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 HTTP_PORT=3000
 HTTPS_PORT=3443
 
+SMTP_HOST=localhost
+SMTP_PORT=9587
+SMTP_USER=username
+SMTP_PASSWORD=password
+SMTP_SENDER=email@example.com
+SMTP_VERIFY_TLS=false
+
+
 BASE_URL=https://localhost:${HTTPS_PORT}
 
 CERT_PATH=certs/cert.pem
