--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,21 +13,26 @@ path = "src/bin/server/main.rs"
 
 [dependencies]
 anyhow = "1.0.86"
+askama = "0.12.1"
 async-trait = "0.1.81"
 axum = { version = "0.7.5", features = ["macros", "matched-path"] }
 axum-server = { version = "0.7.1", features = ["tls-rustls"] }
 axum-test = "15.3.1"
+base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 clap = { version = "4.5.16", features = ["derive", "env"] }
 dotenvy = "0.15.7"
 http-serde = "2.1.1"
 lazy_static = "1.5.0"
+lettre = { version = "0.11.7", features = ["tokio1-native-tls"] }
 mockall = "0.13.0"
 mutants = "0.0.3"
 password-auth = "1.0.0"
+rand = "0.8.5"
 regex = "1.10.6"
 serde = { version = "1.0.208", features = ["serde_derive"] }
 serde_json = "1.0.125"
+sha2 = "0.10.8"
 sqlx = { version = "0.8.0", features = [
     "runtime-tokio",
     "macros",
