--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,28 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_DB=${DB_NAME}
+
   adminer:
     image: adminer
     restart: always
     ports:
       - 8888:8080
+
+  mailtrap:
+    image: dbck/mailtrap:latest
+    environment:
+      # - TZ=Europe/London
+      - MAILTRAP_USER=username
+      - MAILTRAP_PASSWORD=password
+    volumes:
+      - maildata:/var/mail
+    ports:
+      - "9025:25"
+      - "9465:465"
+      - "9587:587"
+      - "9143:143"
+      - "9993:993"
+      - "9080:80"
+
+volumes:
+  maildata:
