--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ constant_time_eq = "0.3.0"
 dotenvy = "0.15.7"
 http-serde = "2.1.1"
 lazy_static = "1.5.0"
-lettre = { version = "0.11.7", features = ["tokio1-native-tls"] }
+lettre = { version = "0.11.7", features = ["smtp-transport", "tokio1-native-tls"] }
 mockall = "0.13.0"
 mutants = "0.0.3"
 password-auth = "1.0.0"
