Rename communication module

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ SMTP_PORT=9587
 SMTP_USER=username
 SMTP_PASSWORD=password
 SMTP_SENDER=email@example.com
-SMTP_VERIFY_TLS=false
-
+SMTP_VERIFY_CERTS=true
+SMTP_STARTTLS=true
 
 BASE_URL=https://localhost:${HTTPS_PORT}
 
