--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ path = "src/bin/server/main.rs"
 
 [dependencies]
 anyhow = "1.0.86"
-askama = "0.12.1"
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.4.0"
 async-trait = "0.1.81"
 axum = { version = "0.7.5", features = ["macros", "matched-path"] }
 axum-server = { version = "0.7.1", features = ["tls-rustls"] }
