--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,11 @@ sqlx = { version = "0.8.0", features = [
 testresult = "0.4.1"
 thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
+tower-http = { version = "0.5.2", features = [
+    "catch-panic",
+    "trace",
+    "compression-full",
+] }
 tower-layer = "0.3.3"
 tower_governor = "0.4.2"
 tracing = "0.1.40"
